RESOLVED FIXED66478
Fix rubber band gutter drawing for Skia on Chromium Mac
https://bugs.webkit.org/show_bug.cgi?id=66478
Summary Fix rubber band gutter drawing for Skia on Chromium Mac
Cary Clark
Reported 2011-08-18 10:19:29 PDT
Fix Rubber band gutter drawing for Skia on Chromium Mac
Attachments
Patch (1.95 KB, patch)
2011-08-18 10:21 PDT, Cary Clark
no flags
Patch (1.96 KB, patch)
2011-08-18 10:24 PDT, Cary Clark
no flags
Patch (2.05 KB, patch)
2011-08-18 11:00 PDT, Cary Clark
no flags
Cary Clark
Comment 1 2011-08-18 10:21:51 PDT
Cary Clark
Comment 2 2011-08-18 10:24:31 PDT
WebKit Review Bot
Comment 3 2011-08-18 10:24:44 PDT
Attachment 104359 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebCore/ChangeLog:13: Line contains tab character. [whitespace/tab] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
James Robinson
Comment 4 2011-08-18 10:44:30 PDT
Comment on attachment 104360 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=104360&action=review > Source/WebCore/ChangeLog:9 > + No new tests. The Skia on Chromium Mac platform has > + not been enabled. We have bots for this config now, don't we? If we had bots, would they catch this issue? Is this a compile-time issue or something that shows up at runtime?
Cary Clark
Comment 5 2011-08-18 11:00:35 PDT
James Robinson
Comment 6 2011-08-18 11:01:22 PDT
Comment on attachment 104365 [details] Patch R=me
WebKit Review Bot
Comment 7 2011-08-18 13:23:09 PDT
Comment on attachment 104365 [details] Patch Clearing flags on attachment: 104365 Committed r93343: <http://trac.webkit.org/changeset/93343>
WebKit Review Bot
Comment 8 2011-08-18 13:23:13 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.