Fix rubber band gutter drawing for Skia on Chromium Mac https://bugs.webkit.org/show_bug.cgi?id=66478

Reviewed by James Robinson.

No new tests. The Skia on Chromium Mac platform has
not been enabled.

This break was detected at compile time; there is no
behavior change.

* platform/chromium/ScrollbarThemeChromiumMac.mm:
(WebCore::ScrollbarThemeChromiumMac::ScrollbarThemeChromiumMac):
Convert the CGImage into an SkBitmap if Skia is present.


Canonical link: https://commits.webkit.org/82339@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93343 268f45cc-cd09-0410-ab3c-d52691b4dbfc